# magnet

./: Cargo.toml  README.md
magnet_derive/: Cargo.toml
magnet_derive/src/: codegen_enum.rs  codegen_field.rs  generics.rs  lib.rs
magnet_schema/: Cargo.toml
magnet_schema/src/: lib.rs  support.rs
magnet_schema/tests/: tests.rs
openapi_json_schema/: Cargo.toml
openapi_json_schema/src/: lib.rs  support.rs
openapi_json_schema/tests/: tests.rs
openapi_json_schema_derive/: Cargo.toml
openapi_json_schema_derive/src/: codegen_enum.rs  codegen_field.rs  codegen_struct.rs  codegen_union.rs  error.rs  generics.rs  lib.rs
