[package]
name          = "openapi_json_schema"
version       = "0.8.0" # remember to update html_root_url in lib.rs and magnet_derive/src/lib.rs
authors       = ["Árpád Goretity <h2co3@h2co3.org>"]
repository    = "https://github.com/H2CO3/magnet.git"
homepage      = "https://h2co3.github.io/magnet/"
license       = "MIT"
readme        = "../README.md"
documentation = "https://docs.rs/openapi_json_schema"
description   = "Magnet, a JSON/BSON schema generator"
keywords      = ["database", "mongodb", "json", "derive", "macro"]
categories    = ["database", "database-implementations", "development-tools", "api-bindings", "web-programming"]

[dependencies]
# for features
url = { version = "1.7.2", optional = true }
uuid = { version = "0.7.1", optional = true, features = ["v4", "serde"] }
serde_json    = "1.0"
openapiv3 = "0.1.3"

[dev-dependencies]
openapi_json_schema_derive = { path = "../openapi_json_schema_derive", version = "0.8.0" }
serde         = "1.0"
serde_derive  = "1.0"

